
  * Add Czech debconf translation, thanks to Daniel Kavan
    (closes: #483299).
  * Add note for translators to debconf template and change back localized
    versions of ".example" to the original as mandated by RFC 2606.
  * Convert de.po from ISO-8859-1 to UTF-8.
  * debian/control: change my email address.
  * Switch patch system from dpatch to quilt.

 -- gregor herrmann <gregoa@debian.org>  Wed, 28 May 2008 19:15:50 +0200

iodine (0.4.1-3) unstable; urgency=low

  * Fix LSB header in init.d script, thanks to Petter Reinholdtsen for the
    report and the patch (closes: #468653).
  * Set debhelper compatibility level to 6.
  * New patch 04_base64: don't build/test {src,tests}/base64* anymore, causes
    a FBTFS on hppa, and isn't actually used anyway (closes: #468404).

 -- gregor herrmann <gregor+debian@comodo.priv.at>  Sat, 01 Mar 2008 19:01:22 +0100

iodine (0.4.1-2) unstable; urgency=low

  * Set Standards-Version to 3.7.3 (no changes required).
  * Create install-stamp target in debian/rules and adjust target
    dependencies.
  * Change debian/copyright to the new machine-readable format.
  * Add patch 03_cflags.dpatch: use CFLAGS from debian/rules in upstream
    Makefiles.

 -- gregor herrmann <gregor+debian@comodo.priv.at>  Tue, 05 Feb 2008 17:31:25 +0100

iodine (0.4.1-1) unstable; urgency=low

  * New upstream release:
    - hides password from ps and stdin (closes: #432719).
    - uses /etc/resolv.conf (closes: #432867).
    - incorporates patch to daemonize before chrooting and dropping
      privileges, therefore dropping 02_detach.dpatch.
    - uses $(MAKE) in Makefile, except in one case, therefore adding patch
      02_make.dpatch.
    - fixes the install dir for the manpage, therefore adapting patch
      01_mandir.dpatch.
  * debian/copyright: update years of copyright.
  * debian/rules: use $(DPATCH_STAMPFN) and $@.
  * Mention (improved) manpage in README.Debian.
