@@ -41,6 +41,23 @@ Files: debian/*
 Copyright:
  © 2007, gregor herrmann <gregor+debian@comodo.priv.at>
  © 2007, tony mancill <tmancill@debian.org>
-License: GPL1+
+License: GPL-1+
 
 See `/usr/share/common-licenses/GPL'.
+
+Files: debian/iodine-jigger
+Copyright: © 2008 Barak A. Pearlmutter <bap@debian.org>
+License: MIT
+ Permission to use, copy, modify, and distribute this software for
+ any purpose with or without fee is hereby granted, provided that
+ the above copyright notice and this permission notice appear in
+ all copies.
+ .
+ THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL
+ WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED
+ WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE
+ AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR
+ CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM
+ LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT,
+ NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN
+ CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
