@@ -7,6 +7,10 @@ iodine (0.4.1-4) UNRELEASED; urgency=low
   * Convert de.po from ISO-8859-1 to UTF-8.
   * debian/control: change my email address.
   * Switch patch system from dpatch to quilt.
+  * Add example script iodine-jigger (script to set up an iodine tunnel and
+    route traffic through it) by Barak A. Pearlmutter (closes: #491294).
+    Thanks, Barak! Add copyright/license information about the script to
+    debian/copyright.
 
  -- gregor herrmann <gregoa@debian.org>  Wed, 28 May 2008 19:15:50 +0200
 
